--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,19 @@
 .fixed{
   position:fixed;
 }
+
+#searchDiv{
+  width:40%;
+  text-align: left;
+  /* margin-left: 50%; */
+  margin-right: 39.5%;
+  display:inline;
+}
+
+.navbar{
+  position:fixed;
+}
+
+.container{
+  margin-top:40px;
+}
